# DEF-tuni

./: .env.cuda.example  .env.serve  .gitignore  AGENTS.md  CLAUDE.md  CUDA_SERVER_READY.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: docker_serve.md  gpu_batch_finder.md  gpu_server.md  no-sleep-blocking.md  read-before-act.md  shared_cuda_infra.md  ssh-servers.md  training_standards.md
benchmarks/: README.md  benchmark_matrix.json  run_benchmark_matrix.py
configs/: cart_paper.toml  debug.toml  fmb_paper.toml  pst900_paper.toml
kernels/: README.md
kernels/cuda/: global_rgbt_attn.cu  local_rgbt_attn.cu  setup.py  tuni_block.cu  tuni_ops.cu
kernels/mlx/: global_rgbt_attn_mlx.py  local_rgbt_attn_mlx.py
kernels/trt/: tuni_trt_plugin.cu
repositories/TUNI/: evaluate_CART.py  evaluate_FMB.py  evaluate_pst900.py  fps.py  model1.py
repositories/TUNI/toolbox/: __init__.py
scripts/: bootstrap_uv.sh  cuda_server_autopilot.sh  launch_cart_when_ready.sh  mlx_eval_stub.py
src/def_tuni/: __init__.py  config.py  data.py  device.py  export.py  metrics.py  model.py  ros2_node.py  runner.py  serve.py  train.py
tasks/: AUTOPILOT_TASKS.md  README.md  backlog.yaml
tasks/prd/: PRD-001.md  PRD-002.md  PRD-003.md
